<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PenTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Common -->
    <string name="COMMON_OK">Ok</string>
    <string name="COMMON_CLOSE">Close</string>
    <string name="COMMON_CANCEL">Cancel</string>
	<string name="COMMON_SAVE">Save</string>
	<string name="COMMON_RETRY">Retry</string>
	<string name="COMMON_APPLY">Apply</string>
	<string name="COMMON_CLEAR">Clear</string>
	
	<string name="QUIL_APP">Quit App</string>
	
	<string name="FAIL_LISTENING_MSG">abnormal connect. please reconnect device.</string>
	<string name="PEN_SLEEP_MODE_MSG">Press Pen power button once to use as the pen is on sleep mode.</string>
	<string name="PEN_TEMP_ERROR_MSG">Low temperature may cause problems during writing.</string>
	<string name="PEN_RMD_ERROR_MSG">RMD_ERROR</string>
	
    
    <!-- MainActivity -->
    <string name="MainActivity_Text_Value_01">Drawing</string>
    <string name="MainActivity_Text_Value_02">Calibration</string>
    <string name="MainActivity_Text_Value_03">StopPen</string>
    <string name="MainActivity_Text_Value_04">ReStartPen</string>
    
    <string name="MainActivity_Text_Value_05">Time test</string>
    
    <string name="MainActivity_Text_Value_06">Clear Log</string>
    <string name="MainActivity_Text_Value_07">Threshold Test</string>
    
    
    <string name="MainActivity_Text_Value_08">Sensor dis</string>
    <string name="MainActivity_Text_Value_09">IR_GAP</string>
    
    <string name="MainActivity_Text_Value_10">Apply</string>
    
    <string name="MainActivity_Text_Value_11">ModelCode</string>
    <string name="MainActivity_Text_Value_12">H/W Ver</string>
    
    <string name="MainActivity_Text_Value_13">MCU1 Ver</string>
    <string name="MainActivity_Text_Value_14">Alive Sec</string>
    
    <string name="MainActivity_Text_Value_15">MCU2 Ver</string>
    <string name="MainActivity_Text_Value_16">Temperature</string>
    
    <string name="MainActivity_Text_Value_17">Packet Count</string>
    <string name="MainActivity_Text_Value_18">Clear</string>
    
    <string name="MainActivity_Text_Value_19">Err X Cnt</string>
    <string name="MainActivity_Text_Value_20">Err Y Cnt</string>
    
    <string name="MainActivity_Text_Value_21">Pressure</string>
    <string name="MainActivity_Text_Value_22">Cur Threshold</string>
    
    <string name="MainActivity_Text_Value_23">Status</string>
    <string name="MainActivity_Text_Value_24">[1 = Down, 2 = Move, 3 = UP, 4 = Hover]</string>
    
    <string name="MainActivity_Text_Value_25">Raw X</string>
    <string name="MainActivity_Text_Value_26">Raw Y</string>
    
    <string name="MainActivity_Text_Value_27">Conv X</string>
    <string name="MainActivity_Text_Value_28">Conv Y</string>
    
    <string name="MainActivity_Text_Value_29">Down Count</string>
    <string name="MainActivity_Text_Value_30">Move Count</string>
    <string name="MainActivity_Text_Value_31">Up Count</string>
    <string name="MainActivity_Text_Value_32">Total Count</string>
    <string name="MainActivity_Text_Value_33">Kbyte</string>
    <string name="MainActivity_Text_Value_34">Byte</string>
    
    
    
    
    <!-- CalibrationActivity -->
    <string name="CALIBRATION_TITLE">변경된 캘리브레이션 정보를 저장 하시겠습니까?</string>
    
    
    <!-- TimeTestViewActivity -->
    <string name="TimeTestView_Text_Value_01">Start time</string>
    <string name="TimeTestView_Text_Value_02">End time</string>
    <string name="TimeTestView_Text_Value_03">Duration</string>
    
    <!-- ThresholdViewActivity -->
    <string name="ThresholdView_Text_Value_01">Pen pressure setting</string>
    <string name="ThresholdView_Text_Value_02">You writeing on the device may look defferent than what you write on the paper depending on how you hold the pen or your writing habits.\nAdjust your writing to be displayed most similar to your writing on paper\nThe optimized writing will be applied.</string>
    <string name="ThresholdView_Text_Value_03">Preview</string>
    <string name="ThresholdView_Text_Value_04">Try to write on the paper</string>
    <string name="ThresholdView_Text_Value_05">Adjust your writing to be displayed most similar to your own</string>
    <string name="ThresholdView_Text_Value_06">Low</string>
    <string name="ThresholdView_Text_Value_07">High</string>
    
    
</resources>
