<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7f7f7f" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFffffff" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/selector_button_back"
                android:onClick="backBtnClicked" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ThresholdView_Text_Value_01"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF646464"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/ThresholdView_Text_Value_02"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF646464" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="#FF000000" >
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:text="@string/ThresholdView_Text_Value_03"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF000000" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:background="@drawable/selector_button_clear"
                    android:onClick="clearBtnClicked" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="4"
                android:background="#FFffffff" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ThresholdView_Text_Value_04"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF000000"
                    android:textSize="30sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ThresholdView_Text_Value_05"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF646464" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/thresholdSeekBarValueTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:text="25"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FF000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ThresholdView_Text_Value_06" />

                        <SeekBar
                            android:id="@+id/thresholdSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ThresholdView_Text_Value_07" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>